# mcp-mqtt-proxy

./: .dockerignore  Dockerfile  LICENSE  README.md  TODO.md  VISION.md  pyproject.toml  smithery.yaml
.github/workflows/: docker-build.yml
src/mcp_mqtt_proxy/: __main__.py  config.py  mqtt_listener.py  mqtt_publisher.py  utils.py
tests/: conftest.py  dummy_stdio_echo.py  test_direct_mcp_interactions.py  test_mqtt_listener.py  test_mqtt_publisher.py  test_stdio_communication.py
tests/fixtures/bridges/: bridge_utils.py  stdio_bridge.py
tests/fixtures/mcp_servers/: notification_responder.py
tests/fixtures/mqtt/: mqtt_utils.py
tests/integration/: direct_responder_test.py  direct_stdio_test.py  mqtt_direct_echo_test.py  notification_test.py  run_integration_tests.py  simple_mqtt_test.py  stdio_bridge_test.py  test_direct_responder.py  test_mqtt_integration.py  test_mqtt_listener_integration.py  test_mqtt_notification.py  test_mqtt_proxy_chain.py  test_mqtt_publisher_integration.py  test_stdio_bridge.py  test_system_integration.py
tests/integration/fixtures/: notification_responder.py  simple_responder.py
tests/mcp_servers/: simple_responder.py  weather.py
tests/performance/: test_mqtt_performance.py
